--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -55,7 +55,9 @@
     "react-ui-scrollspy": "^2.3.0",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "unist-builder": "^4.0.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.23.4",
